--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Style Settings */
-@import url('https://fonts.googleapis.com/css?family=Modak&display=swap');
+/*@import url('https://fonts.googleapis.com/css?family=Modak&display=swap');*/
 :root {
     --colorA: #fefae0; /* Background/text*/
     --colorB: #d76735; /* Link base */
